@@ -1,5 +1,8 @@
 0.02005
-
+    _ issue #21: added methods to _Group for empty_first_label, and refactored
+      item generation out of options, values, value_range to _get_empty_first_option,
+      which the others call.
+      
     - Bugfix: save_to_model() many_to_many multi-value fields where 
       'default_column' included the table name (or 'me.') failed.
 
